feat:update completeCRUD

--- a/TestProject.Web/Views/Vehicle/_EditVehicleModal.cshtml
+++ b/TestProject.Web/Views/Vehicle/_EditVehicleModal.cshtml
@@ -1,4 +1,4 @@
-﻿@model TestProject.VehicleApp.Dto.VehicleEditModel
+﻿@model TestProject.VehicleApp.Dto.VehicleListModel
 @using TestProject.Web.Models.Common.Modals
 @{ Layout = null; }
 @Html.Partial("~/Views/Shared/Modals/_ModalHeader.cshtml", new ModalHeaderViewModel(L("EditVehicle")))
