--- a/TestProject.Web/Views/Vehicle/Index.cshtml
+++ b/TestProject.Web/Views/Vehicle/Index.cshtml
@@ -120,6 +120,7 @@
                         <div class="col-sm-12">
                             <div class="form-group form-float">
                                 <div class="form-line">
+                                    <select id="ddlPerson"></select>
                                     <input type="text" name="PersonId" class="validate form-control">
                                     <label for="name" class="form-label">車輛持有者</label>
                                 </div>
