--- a/TestProject.Web/Views/Vehicle/Index.cshtml
+++ b/TestProject.Web/Views/Vehicle/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@using Abp.Web.Mvc.Extensions
 @model TestProject.VehicleApp.Dto.VehicleViewModel
 @{ ViewBag.ActiveMenu = PageNames.Vehicle;
-    int index = 0; }
+    int index = 0;
+    string vehicleTypeName = "";}
 @section scripts
 {
     @Html.IncludeScript("~/Views/Vehicle/Index.js")
@@ -11,7 +12,7 @@
         <div class="card">
             <div class="header">
                 <h2>
-                    @L("Vehicle")
+                    車輛
                 </h2>
                 <ul class="header-dropdown m-r--5">
                     <li class="dropdown">
@@ -42,7 +43,9 @@
                         {
                             <tr>
                                 <td>@(index+=1)</td>
-                                <td>@vehicle.VehicleType</td>
+
+                                @if (@vehicle.VehicleType == 1) { vehicleTypeName = "汽車"; }else { vehicleTypeName = "機車"; }
+                                <td>@vehicleTypeName</td>
                                 <td>@vehicle.PlateNumber</td>
                                 <td>@vehicle.Mileage</td>
                                 <td>@vehicle.MFD</td>
@@ -81,48 +84,49 @@
                     <div class="row clearfix">
                         <div class="col-sm-12">
                             <div class="form-group form-float">
+                                <label for="name" class="form-label">車輛類型</label>
                                 <div class="form-line">
                                     <select name="VehicleType" class="validate form-control">
                                         <option value="1">汽車</option>
                                         <option value="2">機車</option>
                                     </select>
-                                    @*<label for="name" class="form-label">車輛類型</label>*@
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-12">
                             <div class="form-group form-float">
+                                <label for="name" class="form-label">車牌號碼</label>
                                 <div class="form-line">
                                     <input type="text" name="PlateNumber" required maxlength="10" class="validate form-control">
-                                    <label for="name" class="form-label">車牌號碼</label>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-12">
                             <div class="form-group form-float">
+                                <label for="name" class="form-label">里程數</label>
                                 <div class="form-line">
                                     <input type="number" min="0" name="Mileage" class="validate form-control">
-                                    <label for="name" class="form-label">里程數</label>
+
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-12">
 
                             <div class="form-group form-float">
+                                <label for="name" class="form-label">出廠日期</label>
                                 <div class="form-line">
                                     <input type="datetime-local"
                                            name="MFD" required
                                            class="validate form-control">
-                                    <label for="name" class="form-label">出廠日期</label>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-12">
                             <div class="form-group form-float">
+                                <label for="name" class="form-label">車輛持有者</label>
                                 <div class="form-line">
                                     <select id="ddlPerson"></select>
                                     <input type="text" name="PersonId" class="validate form-control">
-                                    <label for="name" class="form-label">車輛持有者</label>
                                 </div>
                             </div>
                         </div>
