--- a/TestProject.Web/Views/Vehicle/_EditVehicleModal.cshtml
+++ b/TestProject.Web/Views/Vehicle/_EditVehicleModal.cshtml
@@ -1,38 +1,37 @@
-﻿@model TestProject.VehicleApp.Dto.VehicleListModel
-@using TestProject.Web.Models.Common.Modals
+﻿@using TestProject.Web.Models.Common.Modals
+@model TestProject.VehicleApp.Dto.VehicleListModel
 @{ Layout = null; }
-@Html.Partial("~/Views/Shared/Modals/_ModalHeader.cshtml", new ModalHeaderViewModel(L("EditVehicle")))
+@Html.Partial("~/Views/Shared/Modals/_ModalHeader.cshtml", new ModalHeaderViewModel("編輯車輛"))
 
 <div class="modal-body">
-	<form name="VehicleEditForm" role="form" novalidate class="form-validation">
-		<input type="hidden" name="Id" value="@Model.Id" />
-		<div class="row clearfix">
-			<div class="col-sm-12">
+    <form name="VehicleEditForm" role="form" novalidate class="form-validation">
+        <input type="hidden" name="Id" value="@Model.Id" />
+
+        <div class="row clearfix">
+            <div class="col-sm-12">
                 <div class="form-group form-float">
-                    <div class="form-line">
-                        <input  type="text" name="VehicleType" value="@Model.VehicleType" required maxlength="20" class="validate form-control" autocomplete="off">
-                        <label for="displayname" class="form-label">車輛類型</label>
-                    </div>
-                    <div class="form-line">
-                        <input  type="text" name="PlateNumber" value="@Model.PlateNumber" required maxlength="20"  class="validate form-control" autocomplete="off">
-                        <label for="displayname" class="form-label">車牌號碼</label>
-                    </div>
-                    <div class="form-line">
-                        <input  type="number" name="Mileage" value="@Model.Mileage" required maxlength="20" class="validate form-control" autocomplete="off">
-                        <label for="displayname" class="form-label">里程數</label>
-                    </div>
-                    <div class="form-line">
-                        <input  type="datetime-local" name="MFD" value="@Model.MFD" required maxlength="20"  class="validate form-control" autocomplete="off">
-                        <label for="displayname" class="form-label">出廠日期</label>
-                    </div>
-                    <div class="form-line">
-                        <input  type="text" name="PersonId" value="@Model.PersonName" required maxlength="20" class="validate form-control" autocomplete="off">
-                        <label for="displayname" class="form-label">車輛持有者</label>
-                    </div>
+
+                    <label for="VehicleType" class="form-label">車輛類型</label>
+                    <input type="text" name="VehicleType" value="@Model.VehicleType" required maxlength="20" class="validate form-control" autocomplete="off">
+
+                    <label for="PlateNumber" class="form-label">車牌號碼</label>
+                    <input type="text" name="PlateNumber" value="@Model.PlateNumber" required maxlength="20" class="validate form-control" autocomplete="off">
+
+                    <label for="Mileage" class="form-label">里程數</label>
+                    <input type="number" name="Mileage" value="@Model.Mileage" required maxlength="20" class="validate form-control" autocomplete="off">
+
+
+                    <label for="MFD" class="form-label">出廠日期</label>
+                    <input type="datetime-local" name="MFD" value="@Model.MFD" required maxlength="20" class="validate form-control" autocomplete="off">
+
+                    <label for="PersonName" class="form-label">車輛持有者</label>
+                    <input type="text" name="PersonId" value="@Model.PersonName" required maxlength="20" class="validate form-control" autocomplete="off">
+
+
                 </div>
-			</div>
-		</div>
-	</form>
+            </div>
+        </div>
+    </form>
 </div>
 
 @Html.Partial("~/Views/Shared/Modals/_ModalFooterWithSaveAndCancel.cshtml")
